samples/_failures_safe/1761489296_76676b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_40704019.c: In function ‘main’:
./samples/SAFE/__tmp_40704019.c:138:16: error: missing terminating " character
  138 |         printf("No input data\n
      |                ^~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_40704019.c:138:9: error: expected expression at end of input
  138 |         printf("No input data\n
      |         ^~~~~~
./samples/SAFE/__tmp_40704019.c:138:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_40704019.c:138:9: error: expected declaration or statement at end of input
